better install and using TACC_IBWRAPPER_BIN

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,7 +6,7 @@ BIN		:= $(prefix)/bin
 
 DIRLIST		:= $(DESTDIR)$(BIN)
 
-STANDALONE_PRGM := bin/build_env.pl  bin/checkExec.in  bin/getmode.sh  bin/ibrun  bin/tacc_affinity
+STANDALONE_PRGM := bin/build_env.pl  bin/checkExec.in  bin/getmode.sh  bin/ibrun  bin/tacc_affinity bin/tacc_rsh
 VDATE		:= $(shell date +'%F %H:%M')
 
 all:
