--- a/bin/checkExec.in
+++ b/bin/checkExec.in
@@ -77,7 +77,7 @@ function matchExecWmodules(ldd)
 
    local execT
 
-   local dbg = tonumber(getenv("RTM_IBRUN_DEBUG") or 0)
+   local dbg = tonumber(getenv("TACC_IBWRAPPER_DEBUG") or 0)
 
    local mpiN, libName, lib
    for l in ldd:split("\n") do
@@ -134,7 +134,7 @@ end
 
 function main()
 
-   local dbg = tonumber(getenv("RTM_IBRUN_DEBUG") or 0)
+   local dbg = tonumber(getenv("TACC_IBWRAPPER_DEBUG") or 0)
 
    local cmd="unknown"
 
