write helloC.o to $OBJ

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ all: $(OBJ) $(EXEC)
 $(OBJ):
 	mkdir -p $(OBJ)
 
-$(OBJ)helloC: helloC.o
+$(OBJ)helloC: $(OBJ)helloC.o
 	$(LINK.C)  -o $@ $<
 
 $(OBJ)helloC.o: helloC.c
