--- a/bin/checkExec.in
+++ b/bin/checkExec.in
@@ -1,9 +1,17 @@
 #!@path_to_lua@/lua
 -- -*- lua -*-
+local cmd = arg[0]
+
+local i,j = cmd:find(".*/")
+local cmd_dir = "./"
+if (i) then
+   cmd_dir = cmd:sub(1,j)
+end
+package.path = cmd_dir .. "?.lua;" .. package.path
+
+
 require("strict")
 require("string_split")
-require("VarDump")
-require("Dbg")
 require("fileOps")
 require("capture")
 local getenv = os.getenv
