--- a/bin/parseLDD.in
+++ b/bin/parseLDD.in
@@ -131,7 +131,7 @@ function main()
          local t       = pkgT[pkg.pkg] or {}
          local libA    = t.libA or {}
          t.flavor      = pkg.flavor
-         libA[#libA+1] = lib
+         libA[#libA+1] = string_trim(lib)
          t.libA        = libA
          pkgT[pkg.pkg] = t
       end
