collect library names from package

--- a/bin/parseLDD.in
+++ b/bin/parseLDD.in
@@ -6,6 +6,7 @@ require("capture")
 require("fileOps")
 require("serializeTbl")
 require("string_split")
+require("string_trim")
 require("VarDump")
 local Dbg       = require("Dbg")
 local Optiks    = require("Optiks")
