added serializeTbl to required modules, fixed paths for reverseMap

--- a/Makefile.in
+++ b/Makefile.in
@@ -13,6 +13,7 @@ VDATE		:= $(shell date +'%F %H:%M')
 REQUIRED_PKGS   :=                \
 	           capture        \
 	           fileOps        \
+	           serializeTbl   \
 	           strict         \
 	           string_split   \
 	           string_trim    \
