--- a/bin/parseLDD.in
+++ b/bin/parseLDD.in
@@ -81,7 +81,8 @@ function main()
    -- find user command from command line.
 
    for i = 1, #pargs do
-      if (not ignoreT[pargs[i]]) then
+      local f = barefilename(pargs[i])
+      if (not ignoreT[f]) then
          cmd = pargs[i]
          break
       end
