--- a/bin/parseLDD.in
+++ b/bin/parseLDD.in
@@ -112,15 +112,16 @@ function main()
 
 
    -- Add command line options to userT
-   userT.numCores  = getenv("NSLOTS")
-   userT.numNodes  = getenv("NHOSTS")
-   userT.account   = getenv("SGE_ACCOUNT")
-   userT.jobID     = getenv("JOB_ID")
-   userT.user      = getenv("USER")
-   userT.startTime = masterTbl.startTime
-   userT.runTime   = masterTbl.runTime
-   userT.exec      = execPath
-   userT.execEpoch = execEpoch
+   userT.numCores   = getenv("NSLOTS")
+   userT.numNodes   = getenv("NHOSTS")
+   userT.account    = getenv("SGE_ACCOUNT")
+   userT.jobID      = getenv("JOB_ID")
+   userT.user       = getenv("USER")
+   userT.startTime  = masterTbl.startTime
+   userT.runTime    = masterTbl.runTime
+   userT.exec       = execPath
+   userT.execEpoch  = execEpoch
+   userT.execModify = os.date("%c",execEpoch)
 
    local HashSum = findInPath("sha1sum")
    if (HashSum ~= "") then
