must put execdir in LUAPATH

--- a/bin/parseLDD.in
+++ b/bin/parseLDD.in
@@ -1,5 +1,14 @@
 #!@path_to_lua@/lua
 -- -*- lua -*-
+local cmd = arg[0]
+
+local i,j = cmd:find(".*/")
+local cmd_dir = "./"
+if (i) then
+   cmd_dir = cmd:sub(1,j)
+end
+package.path = cmd_dir .. "?.lua;" .. package.path
+
 require("strict")
 
 require("capture")
