trying to deal with intel-.12 and intel-12

--- a/bin/checkExec.in
+++ b/bin/checkExec.in
@@ -40,6 +40,7 @@ activeList = {}
 function canonicalCompilerVersion(v)
    v       = v or ""
    v       = v:gsub("-[0-9]*","")
+   v       = v:gsub("%-%.","-")
    local a = {}
    for vv in v:split("%.") do
       a[#a+1] = vv
