--- a/bin/checkExec.in
+++ b/bin/checkExec.in
@@ -178,7 +178,7 @@ function main()
 
    if (execPath == "") then
       io.stdout:write("******************************************************\n",
-                      "Could not find: ",tostring(path)," in your PATH\n",
+                      "Could not find: ",tostring(cmd)," in your PATH\n",
                       "******************************************************\n")
       return 1
    end
