updating to work better w/ tacc_stats and TACC analytics

--- a/bin/parseLDD.in
+++ b/bin/parseLDD.in
@@ -152,6 +152,7 @@ function main()
    userT.runTime    = masterTbl.runTime
    userT.exec       = execPath
    userT.execEpoch  = execEpoch
+   userT.cwd        = posix.getcwd()
    userT.execModify = os.date("%c",execEpoch)
 
    local HashSum = findInPath("sha1sum")
